# book-loop

./: LICENSE  README.md  main.py  pyproject.toml  reset_db.py
.github/workflows/: build.yml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  books.py  transactions.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  book.py  transaction.py  user.py
app/schemas/: book.py  transaction.py  user.py
client/: api_client.py  main.py
client/ui/: dashboard_screen.py  login_screen.py  register_screen.py  swap_dialog.py  swaps_screen.py  upload_dialog.py
